# crypto-open-data

./: pyproject.toml
.github/workflows/: run.yml
src/: main.py
src/nodes/: __init__.py  defi_tvl.py  defillama.py  dex_volumes.py  lending_rates.py  protocol_fees.py  stablecoins.py
