[project]
name = "crypto-open-data"
version = "0.1.0"
description = "Cryptocurrency data connector using redistribution-friendly sources (DefiLlama, CBECI)"
requires-python = ">=3.11"
dependencies = [
    "s3fs>=2024.0",
    "fsspec>=2024.0",
    "psutil>=5.9.0",
    "boto3",
    "duckdb",
    "httpx",
    "pandas",
    "pyarrow",
    "deltalake>=0.17.0",
    "tenacity",
]

[tool.uv]
dev-dependencies = [
    "psutil>=5.9.0",
]
